--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,25 +6,14 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:11
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: password
-          POSTGRES_DB: test
-        ports:
-          - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+    container: ${{ matrix.ruby }}
+    strategy:
+      matrix:
+        ruby:
+          - ruby:2.6
+          - ruby:2.7
     steps:
       - uses: actions/checkout@v2
-      - name: setup Ruby 2.7
-        uses: actions/setup-ruby@v1
-        with:
-          ruby-version: 2.7.x
-      - name: apt install
-        run: |
-          sudo apt install libpq-dev
       - name: bundle install
         run: |
           gem install bundler
