--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: test
 on:
   - push
 env:
-  CI: "true"
+  CI: 'true'
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -10,19 +10,20 @@ jobs:
     strategy:
       matrix:
         ruby:
-          - ruby:2.6
-          - ruby:2.7
+          - ruby:3.3
+          - ruby:3.4
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: bundle install
         run: |
-          gem install bundler
+          gem install bundler -v '~>2.0'
           bundle install --jobs 4 --retry 3
           bundle exec rake bundle:update
           bundle exec rake bundle:check
+      - name: cert check
+        run: |
+          bundle exec rake cert:update
+          bundle exec rake cert:check
       - name: Run lint
         run: |
           bundle exec rubocop
-      - name: Run test
-        run: |
-          bundle exec rake test
